       - Fixed issue #739 - copy extension headers from JAX-RS api to restlet response.
         Reported by Mark Kharitonov.
      - Fixed issue #727 generation of JSON extension for GWT edition.
      - Fixed issue #757 - Infinite Loop in Feed.
      - Fixed issue #753 - Date concurrency issue due to broken caching attempts. 
        Reported by @effad. Solved by Robert Fischer and Tim Peierls.
    - Misc
       - Added log warning when an authentication scheme does not define a "realm" parameter.
         Reported by Loïc Oudot (#759).

- 2.1.2 (02/28/2013)
    - Bug fixed
       - Log initialization issue in engine with GAE edition fixed.
         Occurred in production.
       - Internal HTTP connector didn't properly configure the
         socket. Factorized client side logic.
       - Fixed HTTPS issues in internal connector.
       - Fixed discovering and setting of attributes from OData 
         representations.
       - Fixed potential flushing issue with wrapped representations.
       - Added support for parsing IPv6 when parsing host URI in internal HTTP server.
         Contributed by Jun Hou. Reported by Reddy Lakshman and Neha Saini.
       - Fixed JaxRsApplication(Application) constructor with a JaxRsRestlet adapter.
       - Fixed NPE while issuing 405 responses in the JAX-RS extension.
         Reported by Daniel Halperin
       - The current response, application, context and virtual host are now properly
         restored when the representation is called back to be written by the internal
         HTTP connector.
       - Fixed bug in Reference when no path existing but the query string has some
         '/' characters in it. getPath() returns StringOutOfBounds exceptions.
         Reported by Nicolas Rinaudo.
       - Fixed bug when chaining Transformer or TransformRepresentation
         objects. Reported by Brian Sletten.

- 2.1.1 (12/23/2012)
    - Bug fixed
       - Fixed arrays serialization in GWT edition.